fix(lang): fix instagram url

--- a/portfolio/frontend/locales/fr.json
+++ b/portfolio/frontend/locales/fr.json
@@ -270,7 +270,7 @@
             },
             {
                 "icon": "instagram",
-                "href": "https://www.instagram.com/AlexandreDFM/",
+                "href": "https://www.instagram.com/alexandre.dfm/",
                 "label": "Instagram",
                 "value": "alexandre.dfm"
             },
