--- a/portfolio/frontend/locales/en.json
+++ b/portfolio/frontend/locales/en.json
@@ -271,7 +271,7 @@
             },
             {
                 "icon": "instagram",
-                "href": "https://www.instagram.com/AlexandreDFM/",
+                "href": "https://www.instagram.com/alexandre.dfm/",
                 "label": "Instagram",
                 "value": "alexandre.dfm"
             },
