--- a/portfolio/frontend/locales/en.json
+++ b/portfolio/frontend/locales/en.json
@@ -33,40 +33,295 @@
         "content": {
             "head_projects": [
                 {
-                    "id": "1",
-                    "title": "Projects",
-                    "description": "Discover my work",
-                    "date": "2025-01-01",
-                    "github": "https://github.com/AlexandreDeFreitasMartins",
-                    "role": "Role",
-                    "duration": "Duration",
-                    "skills": "Skills",
+                    "id": "0",
+                    "title": "AlexandreDFM",
+                    "description": "This is a portfolio project that showcases my skills and experience. I try to update it regularly to reflect my latest work and show my growth as a developer.",
+                    "date": "2023-11-12",
+                    "github": "https://github.com/AlexandreDFM/AlexandreDFM",
+                    "role": "Developer",
+                    "duration": "Ongoing (It's a continuous project)",
+                    "skills": [
+                        "Frontend",
+                        "Deployment",
+                        "Maintenance"
+                    ],
                     "technologies": [
                         "React",
                         "Next.js",
                         "Tailwind CSS",
-                        "TypeScript",
-                        "Node.js",
-                        "Express",
-                        "MongoDB"
+                        "TypeScript"
                     ],
                     "achievements": [
-                        "Réalisation de l'application de gestion de projets",
-                        "Réalisation de l'application de gestion de projets"
+                        "Création d'un portfolio en ligne",
+                        "Mise en place d'un système de gestion des utilisateurs"
                     ],
-                    "category": "professional"
+                    "category": "personal"
+                },
+                {
+                    "id": "1",
+                    "title": "BoxedIn",
+                    "description": "This is a portfolio project that showcases my skills and experience. I try to update it regularly to reflect my latest work and show my growth as a developer.",
+                    "date": "2023-11-12",
+                    "github": "https://github.com/AlexandreDFM/AlexandreDFM",
+                    "role": "Developer",
+                    "duration": "Ongoing (It's a continuous project)",
+                    "skills": [
+                        "Frontend",
+                        "Deployment",
+                        "Maintenance"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Création d'un portfolio en ligne",
+                        "Mise en place d'un système de gestion des utilisateurs"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "2",
+                    "title": "Hownee",
+                    "description": "This is a portfolio project that showcases my skills and experience. I try to update it regularly to reflect my latest work and show my growth as a developer.",
+                    "date": "2023-11-12",
+                    "github": "https://github.com/AlexandreDFM/AlexandreDFM",
+                    "role": "Developer",
+                    "duration": "Ongoing (It's a continuous project)",
+                    "skills": [
+                        "Frontend",
+                        "Deployment",
+                        "Maintenance"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Création d'un portfolio en ligne",
+                        "Mise en place d'un système de gestion des utilisateurs"
+                    ],
+                    "category": "personal"
                 }
             ],
             "projects": [
                 {
-                    "id": "2",
-                    "title": "Projets",
+                    "id": "3",
+                    "title": "Raytracer",
                     "description": "Découvrez mes réalisations",
                     "date": "2025-01-01",
                     "github": "https://github.com/AlexandreDeFreitasMartins",
                     "role": "Rôle",
                     "duration": "Durée",
-                    "skills": "Compétences",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "4",
+                    "title": "MarioClone",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "5",
+                    "title": "Relay",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "6",
+                    "title": "Tuxify",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "7",
+                    "title": "Physical Fireworks",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "8",
+                    "title": "Physical Black Hole",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "9",
+                    "title": "GIF 2024",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "10",
+                    "title": "Corewar",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "11",
+                    "title": "RPG - Pokemon Mystery Dungeon Replica",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
                     "technologies": [
                         "React",
                         "Next.js",
@@ -91,7 +346,7 @@
             "personnal_info": {
                 "myname": "Alexandre",
                 "mylastname": "De Freitas Martins",
-                "mydesc": "My description"
+                "mydesc": "I'm a 22-year-old student at Epitech."
             },
             "language": {
                 "title": "Languages",
@@ -107,7 +362,7 @@
                         "pourcent": "100%"
                     },
                     {
-                        "name": "English",
+                        "name": "English (Toeic)",
                         "level": "Professional",
                         "pourcent": "80%"
                     },
