--- a/portfolio/frontend/locales/fr.json
+++ b/portfolio/frontend/locales/fr.json
@@ -33,6 +33,31 @@
         "content": {
             "head_projects": [
                 {
+                    "id": "0",
+                    "title": "AlexandreDFM",
+                    "description": "This is a portfolio project that showcases my skills and experience. I try to update it regularly to reflect my latest work and show my growth as a developer.",
+                    "date": "2023-11-12",
+                    "github": "https://github.com/AlexandreDFM/AlexandreDFM",
+                    "role": "Developer",
+                    "duration": "Ongoing (It's a continuous project)",
+                    "skills": [
+                        "Frontend",
+                        "Deployment",
+                        "Maintenance"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Création d'un portfolio en ligne",
+                        "Mise en place d'un système de gestion des utilisateurs"
+                    ],
+                    "category": "personal"
+                },
+                {
                     "id": "1",
                     "title": "Projects",
                     "description": "Discover my work",
@@ -55,18 +80,247 @@
                         "Réalisation de l'application de gestion de projets"
                     ],
                     "category": "professional"
+                },
+                {
+                    "id": "2",
+                    "title": "Hownee",
+                    "description": "This is a portfolio project that showcases my skills and experience. I try to update it regularly to reflect my latest work and show my growth as a developer.",
+                    "date": "2023-11-12",
+                    "github": "https://github.com/AlexandreDFM/AlexandreDFM",
+                    "role": "Developer",
+                    "duration": "Ongoing (It's a continuous project)",
+                    "skills": [
+                        "Frontend",
+                        "Deployment",
+                        "Maintenance"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Création d'un portfolio en ligne",
+                        "Mise en place d'un système de gestion des utilisateurs"
+                    ],
+                    "category": "personal"
                 }
             ],
             "projects": [
                 {
-                    "id": "2",
-                    "title": "Projets",
+                    "id": "3",
+                    "title": "Raytracer",
                     "description": "Découvrez mes réalisations",
                     "date": "2025-01-01",
                     "github": "https://github.com/AlexandreDeFreitasMartins",
                     "role": "Rôle",
                     "duration": "Durée",
-                    "skills": "Compétences",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "4",
+                    "title": "MarioClone",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "5",
+                    "title": "Relay",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "6",
+                    "title": "Tuxify",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "7",
+                    "title": "Physical Fireworks",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "8",
+                    "title": "Physical Black Hole",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "9",
+                    "title": "GIF 2024",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "10",
+                    "title": "Corewar",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
+                    "technologies": [
+                        "React",
+                        "Next.js",
+                        "Tailwind CSS",
+                        "TypeScript"
+                    ],
+                    "achievements": [
+                        "Réalisation de l'application de gestion de projets",
+                        "Réalisation de l'application de gestion de projets"
+                    ],
+                    "category": "personal"
+                },
+                {
+                    "id": "11",
+                    "title": "RPG - Pokemon Mystery Dungeon Replica",
+                    "description": "Découvrez mes réalisations",
+                    "date": "2025-01-01",
+                    "github": "https://github.com/AlexandreDeFreitasMartins",
+                    "role": "Rôle",
+                    "duration": "Durée",
+                    "skills": [
+                        "Compétence 1",
+                        "Compétence 2",
+                        "Compétence 3"
+                    ],
                     "technologies": [
                         "React",
                         "Next.js",
@@ -107,7 +361,7 @@
                         "pourcent": "100%"
                     },
                     {
-                        "name": "Anglais",
+                        "name": "Anglais (Toeic)",
                         "level": "B2",
                         "pourcent": "80%"
                     },
