--- a/portfolio/locales/en.json
+++ b/portfolio/locales/en.json
@@ -30,312 +30,7 @@
         "skills": "Skills",
         "technologies": "Technologies",
         "achievements": "Key Achievements",
-        "content": {
-            "head_projects": [
-                {
-                    "id": "0",
-                    "title": "AlexandreDFM",
-                    "description": "This is a portfolio project that showcases my skills and experience. I try to update it regularly to reflect my latest work and show my growth as a developer.",
-                    "date": "2023-11-12",
-                    "github": "https://github.com/AlexandreDFM/AlexandreDFM",
-                    "role": "Developer",
-                    "duration": "Ongoing (It's a continuous project)",
-                    "skills": [
-                        "Frontend",
-                        "Deployment",
-                        "Maintenance"
-                    ],
-                    "technologies": [
-                        "React",
-                        "Next.js",
-                        "Tailwind CSS",
-                        "TypeScript"
-                    ],
-                    "achievements": [
-                        "Création d'un portfolio en ligne",
-                        "Mise en place d'un système de gestion des utilisateurs"
-                    ],
-                    "category": "personal"
-                },
-                {
-                    "id": "1",
-                    "title": "BoxedIn",
-                    "description": "This is a portfolio project that showcases my skills and experience. I try to update it regularly to reflect my latest work and show my growth as a developer.",
-                    "date": "2023-11-12",
-                    "github": "https://github.com/AlexandreDFM/AlexandreDFM",
-                    "role": "Developer",
-                    "duration": "Ongoing (It's a continuous project)",
-                    "skills": [
-                        "Frontend",
-                        "Deployment",
-                        "Maintenance"
-                    ],
-                    "technologies": [
-                        "React",
-                        "Next.js",
-                        "Tailwind CSS",
-                        "TypeScript"
-                    ],
-                    "achievements": [
-                        "Création d'un portfolio en ligne",
-                        "Mise en place d'un système de gestion des utilisateurs"
-                    ],
-                    "category": "personal"
-                },
-                {
-                    "id": "2",
-                    "title": "Hownee",
-                    "description": "This is a portfolio project that showcases my skills and experience. I try to update it regularly to reflect my latest work and show my growth as a developer.",
-                    "date": "2023-11-12",
-                    "github": "https://github.com/AlexandreDFM/AlexandreDFM",
-                    "role": "Developer",
-                    "duration": "Ongoing (It's a continuous project)",
-                    "skills": [
-                        "Frontend",
-                        "Deployment",
-                        "Maintenance"
-                    ],
-                    "technologies": [
-                        "React",
-                        "Next.js",
-                        "Tailwind CSS",
-                        "TypeScript"
-                    ],
-                    "achievements": [
-                        "Création d'un portfolio en ligne",
-                        "Mise en place d'un système de gestion des utilisateurs"
-                    ],
-                    "category": "personal"
-                }
-            ],
-            "projects": [
-                {
-                    "id": "3",
-                    "title": "Raytracer",
-                    "description": "Découvrez mes réalisations",
-                    "date": "2025-01-01",
-                    "github": "https://github.com/AlexandreDeFreitasMartins",
-                    "role": "Rôle",
-                    "duration": "Durée",
-                    "skills": [
-                        "Compétence 1",
-                        "Compétence 2",
-                        "Compétence 3"
-                    ],
-                    "technologies": [
-                        "React",
-                        "Next.js",
-                        "Tailwind CSS",
-                        "TypeScript"
-                    ],
-                    "achievements": [
-                        "Réalisation de l'application de gestion de projets",
-                        "Réalisation de l'application de gestion de projets"
-                    ],
-                    "category": "personal"
-                },
-                {
-                    "id": "4",
-                    "title": "MarioClone",
-                    "description": "Découvrez mes réalisations",
-                    "date": "2025-01-01",
-                    "github": "https://github.com/AlexandreDeFreitasMartins",
-                    "role": "Rôle",
-                    "duration": "Durée",
-                    "skills": [
-                        "Compétence 1",
-                        "Compétence 2",
-                        "Compétence 3"
-                    ],
-                    "technologies": [
-                        "React",
-                        "Next.js",
-                        "Tailwind CSS",
-                        "TypeScript"
-                    ],
-                    "achievements": [
-                        "Réalisation de l'application de gestion de projets",
-                        "Réalisation de l'application de gestion de projets"
-                    ],
-                    "category": "personal"
-                },
-                {
-                    "id": "5",
-                    "title": "Relay",
-                    "description": "Découvrez mes réalisations",
-                    "date": "2025-01-01",
-                    "github": "https://github.com/AlexandreDeFreitasMartins",
-                    "role": "Rôle",
-                    "duration": "Durée",
-                    "skills": [
-                        "Compétence 1",
-                        "Compétence 2",
-                        "Compétence 3"
-                    ],
-                    "technologies": [
-                        "React",
-                        "Next.js",
-                        "Tailwind CSS",
-                        "TypeScript"
-                    ],
-                    "achievements": [
-                        "Réalisation de l'application de gestion de projets",
-                        "Réalisation de l'application de gestion de projets"
-                    ],
-                    "category": "personal"
-                },
-                {
-                    "id": "6",
-                    "title": "Tuxify",
-                    "description": "Découvrez mes réalisations",
-                    "date": "2025-01-01",
-                    "github": "https://github.com/AlexandreDeFreitasMartins",
-                    "role": "Rôle",
-                    "duration": "Durée",
-                    "skills": [
-                        "Compétence 1",
-                        "Compétence 2",
-                        "Compétence 3"
-                    ],
-                    "technologies": [
-                        "React",
-                        "Next.js",
-                        "Tailwind CSS",
-                        "TypeScript"
-                    ],
-                    "achievements": [
-                        "Réalisation de l'application de gestion de projets",
-                        "Réalisation de l'application de gestion de projets"
-                    ],
-                    "category": "personal"
-                },
-                {
-                    "id": "7",
-                    "title": "Physical Fireworks",
-                    "description": "Découvrez mes réalisations",
-                    "date": "2025-01-01",
-                    "github": "https://github.com/AlexandreDeFreitasMartins",
-                    "role": "Rôle",
-                    "duration": "Durée",
-                    "skills": [
-                        "Compétence 1",
-                        "Compétence 2",
-                        "Compétence 3"
-                    ],
-                    "technologies": [
-                        "React",
-                        "Next.js",
-                        "Tailwind CSS",
-                        "TypeScript"
-                    ],
-                    "achievements": [
-                        "Réalisation de l'application de gestion de projets",
-                        "Réalisation de l'application de gestion de projets"
-                    ],
-                    "category": "personal"
-                },
-                {
-                    "id": "8",
-                    "title": "Physical Black Hole",
-                    "description": "Découvrez mes réalisations",
-                    "date": "2025-01-01",
-                    "github": "https://github.com/AlexandreDeFreitasMartins",
-                    "role": "Rôle",
-                    "duration": "Durée",
-                    "skills": [
-                        "Compétence 1",
-                        "Compétence 2",
-                        "Compétence 3"
-                    ],
-                    "technologies": [
-                        "React",
-                        "Next.js",
-                        "Tailwind CSS",
-                        "TypeScript"
-                    ],
-                    "achievements": [
-                        "Réalisation de l'application de gestion de projets",
-                        "Réalisation de l'application de gestion de projets"
-                    ],
-                    "category": "personal"
-                },
-                {
-                    "id": "9",
-                    "title": "GIF 2024",
-                    "description": "Découvrez mes réalisations",
-                    "date": "2025-01-01",
-                    "github": "https://github.com/AlexandreDeFreitasMartins",
-                    "role": "Rôle",
-                    "duration": "Durée",
-                    "skills": [
-                        "Compétence 1",
-                        "Compétence 2",
-                        "Compétence 3"
-                    ],
-                    "technologies": [
-                        "React",
-                        "Next.js",
-                        "Tailwind CSS",
-                        "TypeScript"
-                    ],
-                    "achievements": [
-                        "Réalisation de l'application de gestion de projets",
-                        "Réalisation de l'application de gestion de projets"
-                    ],
-                    "category": "personal"
-                },
-                {
-                    "id": "10",
-                    "title": "Corewar",
-                    "description": "Découvrez mes réalisations",
-                    "date": "2025-01-01",
-                    "github": "https://github.com/AlexandreDeFreitasMartins",
-                    "role": "Rôle",
-                    "duration": "Durée",
-                    "skills": [
-                        "Compétence 1",
-                        "Compétence 2",
-                        "Compétence 3"
-                    ],
-                    "technologies": [
-                        "React",
-                        "Next.js",
-                        "Tailwind CSS",
-                        "TypeScript"
-                    ],
-                    "achievements": [
-                        "Réalisation de l'application de gestion de projets",
-                        "Réalisation de l'application de gestion de projets"
-                    ],
-                    "category": "personal"
-                },
-                {
-                    "id": "11",
-                    "title": "RPG - Pokemon Mystery Dungeon Replica",
-                    "description": "Découvrez mes réalisations",
-                    "date": "2025-01-01",
-                    "github": "https://github.com/AlexandreDeFreitasMartins",
-                    "role": "Rôle",
-                    "duration": "Durée",
-                    "skills": [
-                        "Compétence 1",
-                        "Compétence 2",
-                        "Compétence 3"
-                    ],
-                    "technologies": [
-                        "React",
-                        "Next.js",
-                        "Tailwind CSS",
-                        "TypeScript"
-                    ],
-                    "achievements": [
-                        "Réalisation de l'application de gestion de projets",
-                        "Réalisation de l'application de gestion de projets"
-                    ],
-                    "category": "personal"
-                }
-            ]
-        }
+        "no_projects": "No projects found."
     },
     "about": {
         "title": "About Me",
@@ -400,12 +95,7 @@
             },
             "interest": {
                 "title": "Interests",
-                "items": [
-                    "Coding",
-                    "Gaming",
-                    "Table Tennis",
-                    "Video Games"
-                ]
+                "items": ["Coding", "Gaming", "Table Tennis", "Video Games"]
             },
             "bio": {
                 "title": "Bio",
@@ -444,7 +134,7 @@
                         "date": "07/2022 - 12/2022",
                         "title": "Internship - Full-Stack Developer",
                         "company": "Indigen Solutions, 29 Rue Pastorelli 06000 Nice",
-                    "desc": "At Indigen Solutions, an IT solutions company, I was placed on a number of web projects for various SMEs."
+                        "desc": "At Indigen Solutions, an IT solutions company, I was placed on a number of web projects for various SMEs."
                     },
                     {
                         "date": "02/2023 - 02/2024",
@@ -455,7 +145,7 @@
                     {
                         "date": "02/2024 - 06/2024",
                         "title": "Internship - Project Manager",
-                        "company": "Jeandet Peintures Refinishing (JPR) \newline 307 Bd de la Madeleine, 06000 Nice, France",
+                        "company": "Jeandet Peintures Refinishing (JPR) \\newline 307 Bd de la Madeleine, 06000 Nice, France",
                         "desc": "My internship at JPR involved updating the company's hardware and software, as well as developing an e-commerce platform."
                     }
                 ]
