feat: project management with filters, image handling & more updates
Introduces a user-friendly filtering UI for projects : Enabling search and selection by category, technology, and skill.
Implements separation of featured (pinned) projects from regular ones, presenting them prominently.
Enhances project data with image support, updated types, and localized filter labels.
Improves loading/error states and overall browsing experience for portfolio projects.

--- a/portfolio/locales/en.json
+++ b/portfolio/locales/en.json
@@ -30,7 +30,25 @@
         "skills": "Skills",
         "technologies": "Technologies",
         "achievements": "Key Achievements",
-        "no_projects": "No projects found."
+        "no_projects": "No projects found.",
+        "featured": "Featured Projects",
+        "all_projects": "All Projects",
+        "project": "project",
+        "projects": "projects",
+        "category": {
+            "professional": "Professional",
+            "personal": "Personal",
+            "academic": "Academic"
+        },
+        "filters": {
+            "search": "Search",
+            "search_placeholder": "Search projects...",
+            "category": "Category",
+            "technology": "Technology",
+            "skill": "Skill",
+            "all": "All",
+            "reset": "Reset Filters"
+        }
     },
     "about": {
         "title": "About Me",
